View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022760 | Open CASCADE | OCCT:Data Exchange | public | 2011-10-13 16:24 | 2012-03-29 17:26 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022760: Regression in the method RWStl::WriteAscii | ||||
Description | This regression was noticed during evaluation of STL export by CADS Solution. The method RWStl::WriteAscii does not write the mesh contents to the file due to a regression - the string 'sval' is not assigned to the buffer 'buf' prior to writing. The suggested fix is attached. | ||||
Steps To Reproduce | This problem is reproduced in XDE sample (menu "File / Export / Stl...") | ||||
Tags | No tags attached. | ||||
Test case number | chl 934 D3 | ||||
2011-10-13 16:25 manager |
RWStl.cxx (14,285 bytes) |
|
The regression has been introduced during review of the code of fix 0022572 (SVN integration 8558) |
|
Patch was integrated into SVN branch http://svn/svn/occt/branches/OCC22760 and passed review without remarks. |
2011-10-14 17:48 tester |
chl_934_D3.tar.gz (677 bytes) |
|
Dear BugMaster, File XSDRAWSTLVRML/XSDRAWSTLVRML.cxx was modified in branch http://svn/svn/occt/branches/OCC22760 (writestl draw-command). Dear BugMaster, Workbench KAS:dev:mkv-OCC22760-occt was created from SVN branch http://svn/svn/occt/branches/OCC22760 (and mkv-OCC22760-products from trunk) and compiled on Linux platform. Test case for this bug is chl/934/D3. It is OK. There are not regressions in mkv-OCC22760-products regarding to KAS:dev:products-652-opt. See results in /dn45/occttests/results/KAS/dev/mkv-OCC22760-products_14102011/lin See reference results in /dn45/occttests/results/KAS/dev/products-652-opt_23092011/lin See test cases in /dn45/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Integrated into trunk of occt repository Date: 2011-10-21 22:08:38 +0400 (Fri, 21 Oct 2011) New Revision: 9238 Modified: trunk/src/RWStl/RWStl.cxx trunk/src/XSDRAWSTLVRML/XSDRAWSTLVRML.cxx |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-10-13 16:24 |
|
New Issue | |
2011-10-13 16:24 |
|
Assigned To | => inv |
2011-10-13 16:25 |
|
File Added: RWStl.cxx | |
2011-10-13 16:48 |
|
Relationship added | child of 0022572 |
2011-10-13 16:50 |
|
Note Added: 0018356 | |
2011-10-13 16:50 |
|
Assigned To | inv => kgv |
2011-10-13 16:50 |
|
Status | new => assigned |
2011-10-13 17:46 | kgv | Note Added: 0018357 | |
2011-10-13 17:46 | kgv | Assigned To | kgv => bugmaster |
2011-10-13 17:46 | kgv | Status | assigned => reviewed |
2011-10-14 17:48 |
|
File Added: chl_934_D3.tar.gz | |
2011-10-14 17:49 |
|
Note Added: 0018366 | |
2011-10-14 17:50 |
|
Test case number | => chl 934 D3 |
2011-10-14 17:50 |
|
Status | reviewed => tested |
2011-10-21 22:09 | bugmaster | Note Added: 0018401 | |
2011-10-21 22:09 | bugmaster | Status | tested => verified |
2011-10-21 22:09 | bugmaster | Resolution | open => fixed |
2011-10-21 22:09 | bugmaster | Assigned To | bugmaster => kgv |
2011-12-23 11:19 | bugmaster | Target Version | 6.5.2 => 6.5.3 |
2012-03-20 19:31 |
|
Fixed in Version | => 6.5.2 |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 68bc5ed7 |