0022760: Regression in the method RWStl::WriteAscii